objects/PC_Program_Status__mdt.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Case_Status__c</fullName>
        <description>This field should contain the Case status picklist value to be mapped</description>
        <inlineHelpText>Case Status Picklist Value</inlineHelpText>
        <label>PC Case Status</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Indicator_Status__c</fullName>
        <description>Label of the Program Journey Indicator Status that will be visible on the Program Journey Indicator. You may also specify the fully qualified custom label path ($Label.namespace.labelName).</description>
        <inlineHelpText>Label of the Program Journey Indicator Status that will be visible on the Program Journey Indicator. You may also specify the fully qualified custom label path ($Label.namespace.labelName).</inlineHelpText>
        <label>Indicator Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_OtherRecordType__c</fullName>
        <description>The field holds the other record type. Must be filled if you have chosen &apos;Other&apos; in the Record Type</description>
        <inlineHelpText>The field holds the &apos;Other&apos; record type. Must be filled if you have chosen &apos;Other&apos; in the Record Type field.</inlineHelpText>
        <label>Other Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Program_Code__c</fullName>
        <label>Program Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_RecordType_Namespaceprefix__c</fullName>
        <description>The field describes the namespace prefix for record type.</description>
        <inlineHelpText>Namespace of record type</inlineHelpText>
        <label>Record Type Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_RecordType__c</fullName>
        <label>RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PC_Program</fullName>
                    <default>true</default>
                    <label>PC_Program</label>
                </value>
                <value>
                    <fullName>PC_Copay</fullName>
                </value>
                <value>
                    <fullName>PC_Enrollment</fullName>
                </value>
                <value>
                    <fullName>PC_Alternate_Funding</fullName>
                </value>
                <value>
                    <fullName>PC_Appeal</fullName>
                </value>
                <value>
                    <fullName>PC_Benefits_Investigation_Benefits_Verification</fullName>
                </value>
                <value>
                    <fullName>PC_PAP</fullName>
                </value>
                <value>
                    <fullName>PC_Prior_Authorization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Journey</label>
    <pluralLabel>Program Journeys</pluralLabel>
</CustomObject>